--- a/Frontend/banglefront/src/app/login/login.component.html
+++ b/Frontend/banglefront/src/app/login/login.component.html
@@ -1,1 +1,38 @@
-<p>login works!</p>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-3">
+            <h3 class="page-header">
+            Category of Bangles.
+                
+            </h3>
+            <ul class="list-group">
+                <li class="list-group-item">Glass Bangles</li>
+                <li class="list-group-item">Bentax Bangles</li>
+                <li class="list-group-item">Metal Bangles</li>
+                <li class="list-group-item">Oxide Bangles</li>
+                <li class="list-group-item">plastics Bangles</li>
+                <li class="list-group-item">Lakhe Bangles</li>
+        
+              </ul>
+              
+        </div>
+        <div class="col-sm-9">
+<h1 class="text-center">Login Here</h1>
+<form>
+    <div class="form-group">
+      <label for="emailid">Email Id:</label>
+      <input type="emailid" class="form-control" id="emailid"  name="emailid">
+    </div>
+    <div class="form-group">
+      <label for="pwd">Password:</label>
+      <input type="password" class="form-control" id="password" name="password">
+    </div>
+    <div class="checkbox">
+      <label><input type="checkbox"> Remember me</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+     </div>
+
+   </div>
