--- a/Frontend/banglefront/src/app/register/register.component.html
+++ b/Frontend/banglefront/src/app/register/register.component.html
@@ -1,1 +1,59 @@
-<p>register works!</p>
+
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-sm-3">
+          <h3 class="page-header">
+          Category of Bangles.     
+          </h3>
+          <ul class="list-group">
+              <li class="list-group-item">Glass Bangles</li>
+              <li class="list-group-item">Bentax Bangles</li>
+              <li class="list-group-item">Metal Bangles</li>
+              <li class="list-group-item">Oxide Bangles</li>
+              <li class="list-group-item">plastics Bangles</li>
+              <li class="list-group-item">Lakhe Bangles</li>
+      
+            </ul>
+            
+      </div>
+      <div class="col-sm-9">
+<h1 class="text-center">Register Here</h1>
+<form>
+  <div class="form-group">
+      <label for="Name">Name:</label>
+      <input type="text" class="form-control" id="Name" name="name">
+    </div>
+    <div class="form-group">
+      <label for="address">Address:</label>
+      <input type="text" class="form-control" id="address"  name="address">
+    </div>
+    <div class="form-group">
+      <label for="city">City:</label>
+      <select class="form-control" id="city"  name="city">
+          <option value="">--select--</option>
+          <option>Satara</option>
+          <option>Pune</option>
+          <option>Kolhapure</option>
+          <option>Nashik</option>
+          </select>
+    </div>
+    <div class="form-group">
+      <label for="contact">contact:</label>
+      <input type="contact" class="form-control" id="contact"  name="contact">
+    </div>
+  <div class="form-group">
+    <label for="emailid">Email Id:</label>
+    <input type="emailid" class="form-control" id="emailid"  name="emailid">
+  </div>
+  <div class="form-group">
+    <label for="pwd">Password:</label>
+    <input type="password" class="form-control" id="password" name="password">
+  </div>
+  <div class="checkbox">
+    <label><input type="checkbox"> Remember me</label>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+   </div>
+
+ </div>
