--- a/Frontend/banglefront/src/app/feedback/feedback.component.html
+++ b/Frontend/banglefront/src/app/feedback/feedback.component.html
@@ -1,1 +1,53 @@
-<p>feedback works!</p>
+<div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-3">
+        <h3 class="page-header">
+        Category of Bangles.
+            
+        </h3>
+        <ul class="list-group">
+            <li class="list-group-item">Glass Bangles</li>
+            <li class="list-group-item">Bentax Bangles</li>
+            <li class="list-group-item">Metal Bangles</li>
+            <li class="list-group-item">Oxide Bangles</li>
+            <li class="list-group-item">plastics Bangles</li>
+            <li class="list-group-item">Lakhe Bangles</li>
+    
+          </ul>
+          
+    </div>
+                                <div class="col-sm-9">
+                                    <h1 class="text-center">Valuable Feedback</h1>
+                                    <form (ngSubmit)="submitdata()">
+                                        
+                        
+                                            <div class="form-group">
+                                                <label  for="mesaage">Message:</label>
+                                                
+                                                <textarea class="form-control" id="message" name="message" placeholder="Enter mesaage" [(ngModel)]="fd.mesaage" placeholder="Enter Message Here">
+                                                </textarea>
+                                                </div>
+                                           
+                        
+                    
+                                        
+                                        
+                                        <div class="form-group">
+                                       
+                                            <button type="submit" class="btn btn-primary">Submit</button>
+                                        </div>
+                                        
+                                    </form>
+                                
+                    
+  
+  
+  
+                    </div>
+                        
+                
+             
+            
+  
+        </div>
+    </div>
