--- a/Frontend/banglefront/src/app/register/register.component.html
+++ b/Frontend/banglefront/src/app/register/register.component.html
@@ -1,38 +1,42 @@
 <div class="container-fluid">
   <div class="row">
-      <div class="col-sm-3">
-                      <h3 class="page-header">Our Product 
-
-                      </h3>
-                      <ul class="list-group">
-                      <li class="list-group-item">Spices and Masalas</li>
-                      <li class="list-group-item">Salt,Sugar and Jaggary</li>
-                      <li class="list-group-item">Rice</li>
-                      <li class="list-group-item">Dal</li>
-                      <li class="list-group-item">Dry fruits and Nuts</li>
-                      </ul>
-                  </div>
+    <div class="col-sm-3">
+      <h3 class="page-header">
+      Category of Bangles.
+          
+      </h3>
+      <ul class="list-group">
+          <li class="list-group-item">Glass Bangles</li>
+          <li class="list-group-item">Bentax Bangles</li>
+          <li class="list-group-item">Metal Bangles</li>
+          <li class="list-group-item">Oxide Bangles</li>
+          <li class="list-group-item">plastics Bangles</li>
+          <li class="list-group-item">Lakhe Bangles</li>
+  
+        </ul>
+        
+  </div>
                               <div class="col-sm-9">
                                   <h1 class="text-center">Register Here</h1>
                                   <form (ngSubmit)="submitdata()">
                                       <div class="form-group">
                                           <label for="name">Name :</label>
                                           
-                                          <input type="text" class="form-control" id="name" name="name" placeholder="Enter name"[(ngModel)]="reg.name">
+                                          <input type="text" class="form-control" id="name" name="name" placeholder="Enter name" [(ngModel)]="reg.name">
                                           </div>
                                       
                       
                                           <div class="form-group">
                                               <label  for="address">Address :</label>
                                               
-                                              <input type="text" class="form-control" id="address" name="address" placeholder="Enter address"[(ngModel)]="reg.address">
+                                              <input type="text" class="form-control" id="address" name="address" placeholder="Enter address" [(ngModel)]="reg.address">
                                               </div>
                                          
                       
                                               <div class="form-group">
                                                   <label  for="city">City :</label>
                                                   
-                                                      <select class="form-control" id="city" name="city" placeholder="Enter city"[(ngModel)]="reg.city">
+                                                      <select class="form-control" id="city" name="city" placeholder="Enter city" [(ngModel)]="reg.city">
                                                       <option value="">--select--</option>
                                                       <option>Satara</option>
                                                       <option>Pune</option>
